# growthqa

./: README.md  gitignore  pyproject.toml  requirements.txt  run_app_windows.bat
app/: components.py  config.py  data.py  model_io.py  plots.py  results.py  sidebar.py  streamlit_app.py  styles.py  utils.py
classifier_output/: requirements_lock.txt
classifier_output/saved_models_selected/: HGB_selected_pipeline_20251217_010238.joblib  HGB_selected_pipeline_20251217_010238.manifest.json  HGB_selected_pipeline_20251217_205926.joblib  LR_selected_pipeline_20251217_010238.joblib  LR_selected_pipeline_20251217_010238.manifest.json  LR_selected_pipeline_20251217_205926.joblib  RF_selected_pipeline_20251217_010238.manifest.json  RF_selected_pipeline_20251217_205926.joblib  selected_features_20251217_010238.json  thresholds_20251217_010238.json  train_results_selected_20251217_010238.csv
data/train_data/: meta.csv
src/growthqa/classifier/: save_manifest.py  train_from_meta.py
src/growthqa/cli/: convert_cli.py  grofit_cli.py  grofit_full_cli.py  main.py  merge_meta_cli.py  synth_cli.py
src/growthqa/features/: meta.py  meta_label.py
src/growthqa/grofit/: __init__.py  adapters.py  dr_boot_spline.py  dr_fit_model.py  dr_fit_spline.py  export.py  full_pipeline.py  gc_boot_spline.py  gc_fit_model.py  gc_fit_spline.py  interactive.py  lowess.py  parametric_models.py  pipeline.py  types.py
src/growthqa/io/: audit.py  grofit_io.py  long_format.py  parsers.py  time_parse.py  wide_format.py  wide_loader.py
src/growthqa/pipelines/: auto_train_classifier.py  infer_labels.py  (+2 more)
(+10 files in other folders)
